--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,6 +1,6 @@
 $main : #5b6775;
 $mainDark : #485360;
-$accent : #5fedb6;
+$accent : #4c81ee;
 $accentDark : #2396cd;
 $black : #5b6775;
 $white :white;
@@ -11,7 +11,8 @@ $grey : #e7ecf4;
 
 body{
 	overflow-x: hidden; 
-	background: rgba(223,230,244,.2);
+	//background: rgba(223,230,244,.2);
+	background-color: white;
 }
 
 main{
@@ -590,7 +591,7 @@ main{
 	HEADER MENU
 //////////////////////////////////////
 */
-header{
+header.menu{
 	width: 100%;
 	height: 85px;
 	display: flex;
@@ -601,12 +602,57 @@ header{
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 1000;
-	box-shadow: 0 10px 20px 0 #dfe6f4;
+	z-index: 1;
+	border-bottom: 2px solid $grey;
+	//box-shadow: 0 10px 20px 0 #dfe6f4;
 
-	.logo{
+	.menu-left{
+		display: flex;
+		align-items:center;
+		justify-content:center;
+
+		.menu-search{
+			margin-left: 50px;
+			position: relative;
+
+			input{
+				width: 325px;
+				height: 40px;
+				border-radius: 18px;
+				background: $grey;
+				border:none;
+				outline: none;
+				padding-left: 20px;
+				box-sizing:border-box;
+			}
+
+			input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+			  color: $main;
+			}
+			input::-moz-placeholder { /* Firefox 19+ */
+			  color: $main;
+			}
+			input:-ms-input-placeholder { /* IE 10+ */
+			  color: $main;
+			}
+			input:-moz-placeholder { /* Firefox 18- */
+			  color: $main;
+			}
+			i{
+				position: absolute;
+				top: 8px;
+				right: 10px;
+				color: $main;
+			}
+		}
+	}
+
+	.menu-logo{
 		h1{
 			color: $black;
+		}
+		img{
+			width: 100px;
 		}
 	}
 
@@ -619,12 +665,17 @@ header{
 			display: flex;
 
 			.header-user{
-				padding-left: 50px;
+				margin-left: 35px;
 
 				img{
 					width: 45px;
 					height: 45px;
 					margin-right: 5px;
+				}
+
+				span{
+					font-weight: bold;
+					font-size: 15px;
 				}
 				
 			}
@@ -650,80 +701,8 @@ header{
 					i{
 						font-weight: normal !important;
 						padding-right: 3px;
-						font-size: 34px !important;
-						color: $black;
-					}
-				}
-			}
-		}
-	}
-}
-
-
-
-.headerNoUser{
-	width: 100%;
-	height: 85px;
-	display: flex;
-	justify-content:space-between;
-	align-items:center;
-	background: $main;
-	padding: 0 20px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1000;
-	box-shadow: none;
-	display: none;
-
-	.logo{
-		h1{
-			color: $white;
-		}
-	}
-
-	nav{
-
-		ul{
-			list-style: none;
-			margin:0;
-			padding: 0;
-			display: flex;
-
-			.header-user{
-				padding-left: 50px;
-
-				img{
-					width: 45px;
-					height: 45px;
-					margin-right: 5px;
-				}
-				
-			}
-
-			li{
-				display: flex;
-				align-items:center;
-				padding-right: 10px;
-
-				a i:hover{
-					text-decoration: none;
-					color: $accent;
-				}
-				a:hover{
-					text-decoration: none;
-					color: $accent;
-				}
-				a{
-					color: $white;
-					font-size: 19px;
-					font-weight: lighter;
-
-					i{
-						font-weight: normal !important;
-						padding-right: 3px;
-						font-size: 34px !important;
-						color: $white;
+						font-size: 28px !important;
+						color: $main;
 					}
 				}
 			}
@@ -1120,5 +1099,110 @@ $duration: 1.4s;
 
 }
 
+
+/*
+///////////////////////////////////////
+  LOGIN
+//////////////////////////////////////
+*/
+.login{
+	display: none;
+	width: 100%;
+	height: 100vh;
+	z-index: 2;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: $white;
+
+	.login-hero{
+		height: 100vh;
+		background: url(../img/login-hero.jpg);
+		background-size: cover;
+		background-position: center;
+	}
+
+	.auth-container{
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		align-items:center;
+		justify-content:center;
+	}
+
+	.auth{
+		width: 375px;
+		
+		.auth-logo{
+			width: 200px;
+			margin-bottom: 25px;
+
+			img{
+				width: 100%;
+			}
+		}
+		
+		.auth-item{
+			margin-bottom: 15px;
+			height: auto;
+			overflow: hidden;
+
+			label{
+				font-size: 16px;
+				color: $main;
+				font-weight: bold;
+			}
+
+			input{
+				width: 100%;
+				height: 45px;
+				box-sizing:border-box;
+				border-radius: 6px;
+				padding-left: 20px;
+				background: $white;
+				display: block;
+				border: 2px solid $accent;
+				outline: none;
+			}
+		}
+
+		.auth-btn{
+			background: $accent important;
+		}
+		.auth-create {
+			text-align: center;
+
+			a{
+				padding-top: 5px;
+				display: block;
+			}
+		}
+
+		.auth-facebook{
+			margin:px 0;
+
+			.or{
+				display: block;
+				width: 100%;
+				padding: 10px 0;
+				height: auto;
+				overflow: hidden;
+				text-align: center;
+			}
+
+			.btn-facebook{
+				background: #3B5998;
+				border:none;
+			}
+		}
+
+		.btn{
+			height: 45px;
+			line-height: 1.75;
+		}
+
+
+	}
+}
 
 
