--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -55,7 +55,7 @@ a:hover, button:hover, a:active {
 .bg-actions{
 	width: 100%;
 	height: 100vh;
-	background-image:linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+	background: $main;
 	opacity: 0.75;
 	position: fixed;
 	top: 0;
@@ -696,9 +696,11 @@ a:hover, button:hover, a:active {
 			display: flex;
 
 			.menu-user{
-				margin-left: 35px;
+				width: 150px;
+				margin-left: 0px;
 				position: relative;
 				display: flex;
+				justify-content:flex-end;
 
 				img{
 					width: 45px;
