--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,7 +59,7 @@ a:hover, button:hover, a:active {
 
 .btn-auth {
   background: #4c81ee;
-  color: #5b6775;
+  color: #000;
   font-weight: bold; }
 
 .btn-facebook {
@@ -95,6 +95,17 @@ a:hover, button:hover, a:active {
   text-decoration: none;
   color: white;
   background-image: linear-gradient(135deg, #475fca 0%, #764ba2 100%); }
+
+.btn-circle {
+  padding: 10px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.btn-accent {
+  background-color: #4c81ee !important;
+  color: white; }
 
 #link-novalid {
   background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -160,7 +171,7 @@ a:hover, button:hover, a:active {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
     /* IE6-9 */ }
   .profile .u-info {
-    color: #5b6775; }
+    color: #000; }
     .profile .u-info .u-name h1 {
       font-size: 54px;
       font-weight: bold;
@@ -196,12 +207,12 @@ a:hover, button:hover, a:active {
       .profile .u-info .u-follow a.btn-follow {
         padding: 10px 50px;
         border-radius: 50px;
-        color: #5b6775;
+        color: #000;
         background: #4c81ee;
         font-size: 18px;
         font-weight: bold; }
       .profile .u-info .u-follow a.btn-follow:hover {
-        background: #5b6775;
+        background: #000;
         color: white; }
 
 /*
@@ -326,32 +337,88 @@ a:hover, button:hover, a:active {
       .post .post-content .post-content-time span {
         font-size: 14px;
         font-weight: bold;
-        color: #5b6775; }
+        color: #000; }
     .post .post-content .post-content-actions {
       margin-top: 7px;
       height: auto;
       overflow: hidden; }
+      .post .post-content .post-content-actions .post-content-actions-item {
+        margin-right: 15px; }
       .post .post-content .post-content-actions ul {
         list-style: none;
         margin: 0;
         padding: 0;
         display: flex;
         align-items: center; }
-        .post .post-content .post-content-actions ul li {
-          margin-right: 10px; }
-          .post .post-content .post-content-actions ul li i {
-            font-size: 28px;
-            color: #e7ecf4;
-            cursor: pointer; }
-          .post .post-content .post-content-actions ul li i.like-active {
-            color: #4c81ee; }
+        .post .post-content .post-content-actions ul li span {
+          font-size: 14px;
+          font-weight: bold; }
+        .post .post-content .post-content-actions ul li i {
+          font-size: 28px;
+          cursor: pointer;
+          padding-right: 5px; }
+        .post .post-content .post-content-actions ul li i.like-active {
+          color: #4c81ee; }
     .post .post-content .post-content-caption {
-      margin: 5px 0;
+      margin: 0;
       height: auto;
       overflow: hidden; }
       .post .post-content .post-content-caption p {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: lighter; }
+    .post .post-content .post-content-comments-input {
+      margin: 10px 0; }
+      .post .post-content .post-content-comments-input .btn-circle {
+        margin-left: 15px; }
+    .post .post-content .post-content-comments-input input[type="text"] {
+      position: relative;
+      width: 100%;
+      height: 40px;
+      border-radius: 18px;
+      background: #e7ecf4;
+      border: none;
+      outline: none;
+      padding: 0 20px;
+      box-sizing: border-box; }
+      .post .post-content .post-content-comments-input input[type="text"] i {
+        position: absolute;
+        top: 8px;
+        right: 10px;
+        color: #5b6775; }
+    .post .post-content .post-content-comments-input::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      color: #5b6775; }
+    .post .post-content .post-content-comments-input::-moz-placeholder {
+      /* Firefox 19+ */
+      color: #5b6775; }
+    .post .post-content .post-content-comments-input:-ms-input-placeholder {
+      /* IE 10+ */
+      color: #5b6775; }
+    .post .post-content .post-content-comments-input:-moz-placeholder {
+      /* Firefox 18- */
+      color: #5b6775; }
+    .post .post-content .post-content-comments {
+      height: auto;
+      overflow: hidden;
+      margin-top: 15px;
+      padding: 15px; }
+      .post .post-content .post-content-comments .post-content-comments-item {
+        margin-bottom: 5px;
+        height: auto;
+        overflow: hidden; }
+        .post .post-content .post-content-comments .post-content-comments-item .post-content-comments-item-user {
+          margin-bottom: 5px; }
+          .post .post-content .post-content-comments .post-content-comments-item .post-content-comments-item-user img {
+            width: 35px;
+            height: 35px;
+            margin-right: 10px; }
+          .post .post-content .post-content-comments .post-content-comments-item .post-content-comments-item-user a {
+            color: #000;
+            font-weight: bold; }
+        .post .post-content .post-content-comments .post-content-comments-item .post-content-comments-item-caption p {
+          font-weight: lighter;
+          font-size: 14px;
+          text-align: justify; }
     .post .post-content .post-content-comment-box {
       width: 100%;
       margin-top: 10px;
@@ -382,7 +449,7 @@ a:hover, button:hover, a:active {
           margin-right: 5px; }
         .post .post-content .post-content-comments .post-content-comment-item .post-content-comment-item-user span {
           font-weight: bold;
-          color: #5b6775;
+          color: #000;
           display: block;
           font-size: 18px; }
         .post .post-content .post-content-comments .post-content-comment-item .post-content-comment-item-user small {
@@ -492,7 +559,7 @@ a:hover, button:hover, a:active {
         right: 10px;
         color: #5b6775; }
   .menu .menu-logo h1 {
-    color: #5b6775; }
+    color: #000; }
   .menu .menu-logo img {
     width: 100px; }
   .menu .menu-nav .menu-nav-list {
@@ -505,7 +572,8 @@ a:hover, button:hover, a:active {
       margin-left: 0px;
       position: relative;
       display: flex;
-      justify-content: flex-end; }
+      justify-content: flex-end;
+      cursor: pointer; }
       .menu .menu-nav .menu-nav-list .menu-user img {
         width: 45px;
         height: 45px;
@@ -547,7 +615,7 @@ a:hover, button:hover, a:active {
         text-decoration: none;
         color: #4c81ee; }
       .menu .menu-nav .menu-nav-list .menu-nav-list-item a {
-        color: #5b6775;
+        color: #000;
         font-size: 19px;
         font-weight: lighter; }
         .menu .menu-nav .menu-nav-list .menu-nav-list-item a i {
@@ -840,7 +908,7 @@ header.header-profile {
   width: 100%;
   height: 100vh;
   z-index: 2;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background: white; }
