--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,7 +2,7 @@ $main : #5b6775;
 $mainDark : #485360;
 $accent : #4c81ee;
 $accentDark : #2396cd;
-$black : #5b6775;
+$black : #000;
 $white :white;
 $grey : #e7ecf4;
 
@@ -121,6 +121,20 @@ a:hover, button:hover, a:active {
 	color: $white;
 	background-image:linear-gradient(135deg, #475fca 0%, #764ba2 100%);
 }
+
+.btn-circle{
+	padding: 10px;
+	border-radius: 50%;
+	display: flex;
+	justify-content:center;
+	align-items:center;
+}
+
+.btn-accent{
+	background-color: $accent !important;
+	color: $white;
+}
+
 
 #link-novalid{
 	background-image:linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -456,6 +470,10 @@ a:hover, button:hover, a:active {
 			height: auto;
 			overflow: hidden;
 
+			.post-content-actions-item{
+				margin-right: 15px;
+			}
+
 			ul{
 				list-style: none;
 				margin:0;
@@ -464,12 +482,15 @@ a:hover, button:hover, a:active {
 				align-items:center;
 
 				li{
-					margin-right: 10px;
+					span{
+						font-size: 14px;
+						font-weight: bold;
+					}
 
 					i{
 						font-size: 28px;
-						color: $grey;
 						cursor: pointer;
+						padding-right: 5px;
 					}
 					i.like-active{
 						color: $accent;
@@ -479,15 +500,97 @@ a:hover, button:hover, a:active {
 		}
 
 		.post-content-caption {
-			margin: 5px 0;
+			margin: 0;
 			height: auto;
 			overflow: hidden;
 
+
 			p{
-				font-size: 16px;
+				font-size: 18px;
 				font-weight: lighter;
 			}
 		}
+
+		.post-content-comments-input{
+			margin:10px 0;
+
+			.btn-circle{
+				margin-left: 15px;
+			}
+		}
+
+		.post-content-comments-input input[type="text"]{
+
+				position: relative;
+
+				width: 100%;
+				height: 40px;
+				border-radius: 18px;
+				background: $grey;
+				border:none;
+				outline: none;
+				padding: 0 20px;
+				box-sizing:border-box;
+
+				
+				i{
+					position: absolute;
+					top: 8px;
+					right: 10px;
+					color: $main;
+				}
+			
+		}
+
+		.post-content-comments-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+		  color: $main;
+		}
+		.post-content-comments-input::-moz-placeholder { /* Firefox 19+ */
+		  color: $main;
+		}
+		.post-content-comments-input:-ms-input-placeholder { /* IE 10+ */
+		  color: $main;
+		}
+		.post-content-comments-input:-moz-placeholder { /* Firefox 18- */
+		  color: $main;
+		}
+
+		.post-content-comments{
+			height: auto;
+			overflow: hidden;
+			margin-top:15px;
+			padding: 15px;
+
+			.post-content-comments-item{
+				margin-bottom: 5px;
+				height: auto;
+				overflow: hidden;
+
+				.post-content-comments-item-user{
+					margin-bottom: 5px;
+					img{
+						width: 35px;
+						height: 35px;
+						margin-right: 10px;
+					}
+
+					a{
+						color: $black;
+						font-weight: bold;
+					}
+				}
+
+				.post-content-comments-item-caption{
+					p{
+						font-weight: lighter;
+						font-size: 14px;
+						text-align: justify;
+					}
+				}
+			}
+		}
+
+
 
 		.post-content-comment-box{
 			width: 100%;
@@ -701,6 +804,7 @@ a:hover, button:hover, a:active {
 				position: relative;
 				display: flex;
 				justify-content:flex-end;
+				cursor: pointer;
 
 				img{
 					width: 45px;
@@ -1180,7 +1284,7 @@ $duration: 1.4s;
 	width: 100%;
 	height: 100vh;
 	z-index: 2;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	background: $white;
