--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -135,6 +135,24 @@ a:hover, button:hover, a:active {
 	color: $white;
 }
 
+.sub-title-space{
+	display: flex;
+	justify-content:space-between;
+	align-items:center;
+	
+	h2{
+		font-weight: bold;
+		font-size: 36px;
+	}
+	span{
+		font-size: 16px;
+		font-weight: lighter;
+		padding-left: 10px;
+		padding-top: 7px;
+	}
+
+}
+
 
 #link-novalid{
 	background-image:linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -1273,6 +1291,65 @@ $duration: 1.4s;
 
 }
 
+/*
+///////////////////////////////////////
+  HASHTAG 
+//////////////////////////////////////
+*/
+#hashtagFollow, #hashtagFollowing{
+	display: none;
+}
+
+.hashtag-container{
+	.sub-title-space{
+		margin-bottom: 20px;
+	}
+}
+.hashtag-item:nth-child(odd){
+	padding-left: 2.5px;
+}
+.hashtag-item:nth-child(even){
+	padding-right: 2.5px;
+}
+.hashtag-item{
+	width: 50%;
+	float: left;
+	margin-bottom: 5px;
+	box-sizing:border-box;
+
+	.hashtag-item-image{
+		height: 250px;
+		background-size: cover !important;
+		background-position: center !important;
+		background-color: $grey;
+		display: flex;
+		align-items:flex-end;
+
+		.hashtag-item-user{
+			/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.65+100 */
+			background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6-15 */
+			background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+			padding:10px;
+			width: 100%;
+			color: $white;
+
+			span{
+				font-weight: bold;
+				font-size: 16px;
+			}
+
+			.hashtag-item-pp{
+				width: 50px;
+				height: 50px;
+			}
+		}
+
+
+		
+	}
+}
 
 /*
 ///////////////////////////////////////
