--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Leckerli+One");
 body {
   overflow-x: hidden;
-  background-color: white; }
+  background: rgba(223, 230, 244, 0.2); }
 
 main {
   width: 100%;
@@ -46,6 +46,9 @@ a:hover, button:hover, a:active {
 .bg-magic {
   background-image: linear-gradient(-225deg, #D4FFEC 0%, #57F2CC 48%, #4596FB 100%); }
 
+.bold {
+  font-weight: bold; }
+
 .flex-uses {
   display: flex;
   align-items: center; }
@@ -56,6 +59,9 @@ a:hover, button:hover, a:active {
 .hashtag {
   font-weight: bold;
   color: #4c81ee; }
+
+.btn {
+  cursor: pointer; }
 
 .btn-auth {
   background: #4c81ee;
@@ -106,6 +112,9 @@ a:hover, button:hover, a:active {
 .btn-accent {
   background-color: #4c81ee !important;
   color: white; }
+
+.btn-accent:hover {
+  background-color: #5b6775 !important; }
 
 .sub-title-space {
   display: flex;
@@ -538,6 +547,88 @@ a:hover, button:hover, a:active {
   top: 0;
   left: 0;
   z-index: 1; }
+  .menu .menu-notifications {
+    position: relative; }
+    .menu .menu-notifications .menu-notifications-toggle {
+      cursor: pointer; }
+    .menu .menu-notifications .menu-notifications-alert {
+      background-color: #4c81ee;
+      color: white;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 0;
+      left: 16px;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px; }
+      .menu .menu-notifications .menu-notifications-alert span {
+        font-size: 11px;
+        font-weight: bold; }
+    .menu .menu-notifications .notification_list {
+      position: absolute;
+      top: 50px;
+      left: -225px;
+      width: 400px;
+      height: 350px;
+      background-color: white;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      overflow-y: scroll !important;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+      display: none;
+      -webkit-animation-duration: 0.45s !important;
+      -webkit-animation-delay: 0s !important; }
+      .menu .menu-notifications .notification_list .not-item {
+        width: 100%;
+        height: 75px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid rgba(223, 230, 244, 0.2);
+        box-sizing: border-box;
+        padding: 0 10px; }
+        .menu .menu-notifications .notification_list .not-item .not-item-pp {
+          margin-right: 10px;
+          width: 50px; }
+        .menu .menu-notifications .notification_list .not-item .not-body {
+          width: 250px; }
+        .menu .menu-notifications .notification_list .not-item .not-image {
+          width: 50px; }
+        .menu .menu-notifications .notification_list .not-item .not-follower {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center; }
+          .menu .menu-notifications .notification_list .not-item .not-follower .avatar {
+            width: 50px;
+            height: 50px;
+            overflow: hidden; }
+          .menu .menu-notifications .notification_list .not-item .not-follower p {
+            font-size: 14px;
+            font-weight: lighter;
+            margin: 0;
+            padding: 0; }
+          .menu .menu-notifications .notification_list .not-item .not-follower .not-img {
+            width: 50px; }
+        .menu .menu-notifications .notification_list .not-item .not-comment {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center; }
+          .menu .menu-notifications .notification_list .not-item .not-comment .avatar {
+            width: 50px;
+            height: 50px;
+            overflow: hidden; }
+          .menu .menu-notifications .notification_list .not-item .not-comment p {
+            font-size: 14px;
+            font-weight: lighter;
+            margin: 0;
+            padding: 0; }
+          .menu .menu-notifications .notification_list .not-item .not-comment .not-img {
+            width: 50px; }
   .menu .menu-left {
     display: flex;
     align-items: center;
@@ -607,7 +698,9 @@ a:hover, button:hover, a:active {
         border: 1px solid #e7ecf4;
         margin-top: 10px;
         text-align: center;
-        background: #e7ecf4; }
+        background: #e7ecf4;
+        -webkit-animation-duration: 0.45s !important;
+        -webkit-animation-delay: 0s !important; }
         .menu .menu-nav .menu-nav-list .menu-user .header-user-options a, .menu .menu-nav .menu-nav-list .menu-user .header-user-options a:hover, .menu .menu-nav .menu-nav-list .menu-user .header-user-options a:active {
           text-decoration: none !important; }
         .menu .menu-nav .menu-nav-list .menu-user .header-user-options .header-user-options-list {
@@ -935,6 +1028,7 @@ header.header-profile {
   box-sizing: border-box; }
   .hashtag-item .hashtag-item-image {
     height: 250px;
+    width: 100%;
     background-size: cover !important;
     background-position: center !important;
     background-color: #e7ecf4;
@@ -952,7 +1046,8 @@ header.header-profile {
       /* IE6-9 */
       padding: 10px;
       width: 100%;
-      color: white; }
+      color: white;
+      display: block; }
       .hashtag-item .hashtag-item-image .hashtag-item-user span {
         font-weight: bold;
         font-size: 16px; }
